--- a/pd-ui/src/components/Header/Header.less
+++ b/pd-ui/src/components/Header/Header.less
@@ -1,10 +1,17 @@
 .header{
   padding: 20px;
-  margin-bottom: 10px;
   border-bottom: 2px solid #ddd;
+  background-color: #fff;
+  overflow: hidden;
+
 }
 
 .app-name{
   font-size: 18px;
   font-weight: bold;
+  float: left;
+}
+
+.right-side{
+  float: right;
 }
